WebCore:

2008-10-22  Brent Fulgham  <bfulgham@gmail.com>

        Correct build regressions in Cairo port for Windows.
        http://bugs.webkit.org/show_bug.cgi?id=21724

        Reviewed by Adam Roben.

        * WebCore.vcproj/WebCore.vcproj:  Fixed include paths and post-build event for the Debug_Cairo and Release_Cairo configurations.
        * platform/graphics/win/GraphicsContextCairoWin.cpp:
        (WebCore::GraphicsContext::GraphicsContext): Update to newer constructor signature.
        * platform/network/curl/DNSCurl.cpp: Added.
        (WebCore::prefetchDNS):
        * platform/network/curl/ResourceRequest.h:
        * platform/win/ScrollbarThemeWin.cpp:
        (WebCore::ScrollbarTheme::nativeTheme):

WebKit/win:

2008-10-22  Brent Fulgham  <bfulgham@gmail.com>

        Correct build regressions in Cairo port for Windows.
        http://bugs.webkit.org/show_bug.cgi?id=21724

        Reviewed by Adam Roben.

        * WebView.cpp:
        (WebView::notifyPreferencesChanged): Don't try to call
        setShouldPaintNativeControls when SafariTheme support is disabled, as
        that function doesn't exist in that case.

Canonical link: https://commits.webkit.org/30021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37797 268f45cc-cd09-0410-ab3c-d52691b4dbfc