WebCore/platform/network/curl/ResourceRequest.h
@@ -29,6 +29,8 @@
 
 #include "ResourceRequestBase.h"
 
+typedef const void* CFURLRequestRef;
+
 namespace WebCore {
 
     struct ResourceRequest : ResourceRequestBase {
@@ -53,6 +55,9 @@ namespace WebCore {
             : ResourceRequestBase(KURL(), UseProtocolCachePolicy)
         {
         }
+
+        // Needed for compatibility.
+        CFURLRequestRef cfURLRequest() const { return 0; }
 
     private:
         friend class ResourceRequestBase;
