WebKit/win/WebView.cpp
@@ -4148,10 +4148,12 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
         return hr;
     settings->setOfflineWebApplicationCacheEnabled(enabled);
 
+#if USE(SAFARI_THEME)
     hr = prefsPrivate->shouldPaintNativeControls(&enabled);
     if (FAILED(hr))
         return hr;
     settings->setShouldPaintNativeControls(!!enabled);
+#endif
 
     if (!m_closeWindowTimer.isActive())
         m_mainFrame->invalidate(); // FIXME
